--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -107,5 +107,5 @@ jobs:
             sleep $((i * 3))
           done
           
-          echo "❌ Failed to push after 5 attempts"
+          echo "❌ Failed to push after 5 attempts1"
           exit 1
